# socradoc

./: .dir-locals.el  .gitignore  LICENSE  Makefile-files  Makefile.am  README.md  configure.ac  interactive-meter-test.shin
.github/workflows/: c-cpp.yml
auto-m4/: .gitignore
bash-completion/: Makefile-files  scnp-cli
build-helpers/: package-version.mk
doc/: Makefile-files  soundcraft-notepad-usb-protocol.md  spellcheck  wordlist.txt
doc/units/: range-test.py  thresh-test.py
m4/: Makefile-files  ndim-cflags-add.m4  ndim-path-prog.m4
man/: Makefile-files  scnp-cli.1in
src/: Makefile-files  milli_sleep.c  milli_sleep.h  scnp-cli-main.c
test/: Makefile-files  log-compiler-hw  scnp-cli--help.nohw  scnp-cli--help.shin  scnp-cli--version.nohw  scnp-cli--version.shin  scnp-cli_audio-routing_-1.nohw  scnp-cli_audio-routing_-1.shin  scnp-cli_audio-routing_0.hw  scnp-cli_audio-routing_0.sh  scnp-cli_audio-routing_3.hw  scnp-cli_audio-routing_3.sh  scnp-cli_audio-routing_3.shin  scnp-cli_audio-routing_4.sh  scnp-cli_audio-routing_4.shin  scnp-cli_audio-routing_emptystr.nohw  scnp-cli_audio-routing_emptystr.shin  scnp-cli_audio-routing_nothing.nohw  scnp-cli_audio-routing_nothing.shin  scnp-cli_ducker-off.hw  scnp-cli_ducker-on_0_0ms.hw  scnp-cli_ducker-on_0b0000_0ms.hw  scnp-cli_ducker-on_0b0000_0ms.sh  scnp-cli_ducker-on_0b1111_0ms.hw  scnp-cli_ducker-on_0b1111_0ms.sh  scnp-cli_ducker-on_0b1111_5000ms.hw  scnp-cli_ducker-on_0b1111_5000ms.sh  scnp-cli_ducker-on_0b1111_5001ms.sh  scnp-cli_ducker-on_15_1000ms.hw  scnp-cli_ducker-on_15_1000ms.sh  scnp-cli_ducker-on_16_1000ms.nohw  scnp-cli_ducker-range_-10dB.nohw  scnp-cli_ducker-range_0dB.sh  scnp-cli_ducker-range_100dB.sh  scnp-cli_ducker-range_90dB.hw  scnp-cli_ducker-range_90dB.sh  scnp-cli_ducker-reset.hw  scnp-cli_ducker-threshold_-60dB.hw  scnp-cli_ducker-threshold_-60dB.sh  scnp-cli_ducker-threshold_-70dB.sh  (+11 more)
udev/: 70-soundcraft-notepad.rules  80-soundcraft-notepad.rules  Makefile-files
