ACLOCAL_AMFLAGS = -I auto-m4 -I m4 --install
AM_INSTALLCHECK_STD_OPTIONS_EXEMPT =

bin_PROGRAMS =
BUILT_SOURCES =
CLEANFILES =
EXTRA_DIST =
noinst_DATA =

include build-helpers/package-version.mk

include Makefile-files
include include/Makefile-files
include m4/Makefile-files
include src/Makefile-files
